# Android-Zbar-JNI-Example

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ndunks/zbarjniexample/: CameraPreview.java  DisplayActivity.java  MainActivity.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/iconv/: CMakeLists.txt
app/src/main/jni/iconv/lib/: genflags.c  iconv.c  relocatable.c
app/src/main/jni/iconv/libcharset/lib/: localcharset.c
app/src/main/jni/zbar/: CMakeLists.txt
app/src/main/jni/zbar/zbar/: config.c  decoder.c  error.c  image.c  img_scanner.c  jpeg.c  processor.c  scanner.c  svg.c  video.c  window.c
app/src/main/jni/zbar/zbar/decoder/: codabar.c  code128.c  code39.c  code93.c  databar.c  ean.c  i25.c  pdf417.c  qr_finder.c
app/src/main/jni/zbar/zbar/processor/: posix.c  x.c
app/src/main/jni/zbar/zbar/qrcode/: binarize.c  isaac.c  qrdec.c  qrdectxt.c  rs.c
app/src/main/jni/zbar/zbar/video/: v4l.c  v4l1.c  v4l2.c  vfw.c
app/src/main/jni/zbar/zbar/window/: win.c  ximage.c  xv.c
app/src/main/res/layout/: activity_display.xml  activity_main.xml
app/src/main/res/values/: strings.xml
